// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Lsi.Item docKit example UU5.Bricks.Lsi.Item example01 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID0"
  style={Object {}}
  title={null}
>
  <lsi-item
    id="uuID1"
    key="uuID1"
    language="cs"
  >
    Item: cs, en, sk - (cs) Při neznámém jazyku se zobrazí Environment.defaultLanguage en
  </lsi-item>
  <lsi-item
    content="Item: cs, en, sk -> (en) When an unknown language is displayed Environment.defaultLanguage en"
    id="uuID2"
    key="uuID2"
    language="en"
  />
</div>
`;

exports[`UU5.Bricks.Lsi.Item props checkGrammar=false 1`] = `
<Span
  checkGrammar={false}
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props checkGrammar=true 1`] = `
<Span
  checkGrammar={true}
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props checkHighlight=false 1`] = `
<Span
  checkHighlight={false}
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props checkHighlight=true 1`] = `
<Span
  checkHighlight={true}
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props checkSpaces=false 1`] = `
<Span
  checkSpaces={false}
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props checkSpaces=true 1`] = `
<Span
  checkSpaces={true}
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props className="my-classname" 1`] = `
<Span
  className="uu5-bricks-lsi-item my-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props className="test-classname" 1`] = `
<Span
  className="uu5-bricks-lsi-item test-classname"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props content="This is Content from ContentMixin" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  content="This is Content from ContentMixin"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props content=12345 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  content={12345}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props controlled=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props controlled=true 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props default props 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props disabled=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props disabled=false 3`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props disabled=true 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props disabled=true 3`] = `
<Span
  className="uu5-bricks-lsi-item"
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props dynamic=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props dynamic=true 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  dynamic={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props fullTextSearchPriority=0 1`] = `
<Span
  className="uu5-bricks-lsi-item uu-fulltextsearch-0"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props hidden=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props hidden=false 3`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props hidden=true 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props hidden=true 3`] = `
<Span
  className="uu5-bricks-lsi-item"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props id="myId" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="myId-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props id="test-id" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="test-id-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props ignoreHTML=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props ignoreHTML=true 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props language="cs" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props language="en" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props mainAttrs=undefined 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props name="myName" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
/>
`;

exports[`UU5.Bricks.Lsi.Item props nestingLevel="box" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props nestingLevel="inline" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props noIndex=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props noIndex=true 1`] = `
<Span
  className="uu5-bricks-lsi-item uu5-noindex uu-fulltextsearch-0"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props noPrint=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props noPrint=true 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props pureRender=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props pureRender=true 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  pureRender={true}
/>
`;

exports[`UU5.Bricks.Lsi.Item props selected=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Lsi.Item props selected=true 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  selected={true}
/>
`;

exports[`UU5.Bricks.Lsi.Item props style="padding:8px; borderRadius: 2px" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Lsi.Item props style={"backgroundColor":"red","color":"blue"} 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Lsi.Item props style={"margin":8} 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.Lsi.Item props textCorrector=false 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  textCorrector={false}
/>
`;

exports[`UU5.Bricks.Lsi.Item props textCorrector=true 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={Object {}}
  textCorrector={true}
/>
`;

exports[`UU5.Bricks.Lsi.Item props tooltip="My Tooltip" 1`] = `
<Span
  className="uu5-bricks-lsi-item"
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  tooltip="My Tooltip"
/>
`;
